Clarify mutable and immutable list conversions
Added comments to clarify the conversion of lists to mutable and immutable types.